--- a/styles/style2.css
+++ b/styles/style2.css
@@ -5,6 +5,19 @@
     --sky-blue: #A5E1F5;
 }
 
+@font-face {
+    font-family: 'translate-server-font';
+    src: url(../assets/fonts/Righteous/Righteous-Regular.ttf) format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'second-font';
+    src: url(../assets/fonts/Parkinsans/Parkinsans-VariableFont_wght.ttf);
+    font-style: normal;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -12,7 +25,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: var(--violette);
-    overflow: hidden; /* Prevent scrolling */
+    overflow: auto;
 }
 
 .mainContainer {
@@ -26,7 +39,7 @@ body {
 }
 
 header {
-    width: 96%;
+    width: 100%;
     height: 25%;
     border-radius: 15px;
     display: flex;
@@ -73,35 +86,96 @@ header > nav > ul > li > a:hover {
 }
 
 aside {
-    width: 92%;
+    width: 95%;
     height: 75%;
     font-family: 'second-font';
     background-color: #fff;
     box-shadow: 10px 10px 10px 1px var(--purple-gray);
     border-radius: 15px;
     padding: 2rem;
-    overflow-y: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
-button {
-    color: #fff;
+.formContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 45%;
+}
+
+.categorySelectContainer {
+    margin-bottom: 20px;
+}
+
+.addWordForm {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.addWordForm input {
+    padding: 10px;
+    border: 2px solid var(--lila);
+    border-radius: 5px;
+    font-size: 16px;
+    transition: border-color 0.3s ease;
+}
+
+.addWordForm input:focus {
+    border-color: var(--sky-blue);
+    outline: none;
+}
+
+.addWordForm button {
+    padding: 10px;
     background-color: var(--lila);
-    padding: 1rem 2rem;
+    color: #fff;
     border: none;
-    border-radius: 8px;
-    font-size: 1.2rem;
+    border-radius: 5px;
     cursor: pointer;
-    margin-bottom: 1rem;
-    transition: background-color 0.3s;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
 }
 
-button:hover {
+.addWordForm button:hover {
     background-color: var(--sky-blue);
 }
 
+select {
+    background-color: #fff;
+    color: var(--lila);
+    border: 2px solid var(--lila); /* Añadir borde */
+    padding: 10px 10px;
+    margin: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 10px;
+    text-align: center;
+}
+
+select:hover {
+    background-color: darkviolet;
+    color: #fff;
+}
+
 .tableContainer {
-    max-height: 80%;
+    max-height: 400px;
     overflow-y: auto;
+    overflow-x: auto;
+    width: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    background-color: #fff;
+    padding: 10px;
 }
 
 table {
@@ -114,6 +188,7 @@ th, td {
     border: 1px solid var(--purple-gray);
     padding: 0.8rem;
     text-align: left;
+    word-wrap: break-word;
 }
 
 th {
@@ -125,44 +200,8 @@ tr:nth-child(even) {
     background-color: var(--violette);
 }
 
-button, select {
-    background-color: var(--violette);
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    margin: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-button:hover, select:hover {
-    background-color: darkviolet;
-}
-
-select {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4 5"><path fill="white" d="M2 0L0 2h4zm0 5L0 3h4z"/></svg>');
-    background-repeat: no-repeat;
-    background-position: right 10px center;
-    background-size: 10px;
-}
-
-.tableContainer {
-    overflow-x: auto;
-    max-height: 400px;
-    transition: max-height 0.5s ease;
-}
-
-.tableContainer.hidden {
-    max-height: 0;
-}
-
 .footerContainer {
-    width: 94.5%;
+    width: 97.5%;
     text-align: center;
     padding: 1rem;
     background-color: #fff;
